--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -36,12 +36,12 @@ html.css-scroll-fixed
 
 	+media('<tab-lg')
 		left: 0
-		top: #{$top-panel-height--md}
-		height: calc(100vh - #{$top-panel-height--md})
+		//top: #{$top-panel-height--md}
+		//height: calc(100vh - #{$top-panel-height--md})
 		max-width: none
 		padding-top: 0
 		
-		&::before
+		//&::before
 			+pseudo()
 			+position(-40px, 0)
 			+size(100%, 40px)
@@ -70,7 +70,7 @@ html.css-scroll-fixed
 
 	+media('<tab-lg')
 		width: 100%
-		height: calc(100vh - #{$top-panel-height--md})
+		//height: calc(100vh - #{$top-panel-height--md})
 
 .nav-wrap__holder
 	//display: table
@@ -83,7 +83,7 @@ html.css-scroll-fixed
 
 	+media('<tab-lg')
 		width: 100%
-		min-height: calc(100vh - #{$top-panel-height--md})
+		//min-height: calc(100vh - #{$top-panel-height--md})
 
 	// для браузеров не поддерживающих display: flex
 	.no-flexbox &
@@ -124,21 +124,24 @@ html.css-scroll-fixed
 
 .nav-title
 	position: relative
+	border: 0 solid darken($bg-color-light, 20%)
+
+	+media('<tab-lg')
+		text-align: center
+		padding: 15px #{$text-layout-space-horizontal--md + $top-panel-height--md} 15px #{$text-layout-space-horizontal--md}
+		border-bottom-width: 1px
 
 .logo-nav
 	display: block
 	padding: 15px #{$page-layout-space-horizontal}
 	text-decoration: none
 	color: $text-color
-	border-bottom: 1px solid transparent
-	background-color: #{$bg-color}
+	border-style: solid
+	border-color: inherit
+	border-width: 0 0 1px
+	background-color: $bg-color-light
 	transition-property: color, background-color
 	transition-duration: $animation-speed
-
-	+media('<tab-lg')
-		text-align: center
-		background-color: transparent
-		border-color: #ccc
 
 	.no-touchevents &:hover
 		background-color: darken($bg-color-light, 10%)
@@ -149,6 +152,13 @@ html.css-scroll-fixed
 
 	.no-touchevents .home-page &:hover
 		background-color: lighten($logo-bg-color, 10%)
+
+	+media('<tab-lg')
+		+display-inline-block-top
+		padding: 0
+		border: none
+		//background-color: transparent
+		//border-color: #ccc
 
 .logo-nav__img
 	+display-inline-block-middle
@@ -253,6 +263,9 @@ html.css-scroll-fixed
 			color: $base-color
 			//+font-bold
 
+			.ea-site &
+				color: $base-color--ea
+
 			& > span
 				&::after
 					content: none
@@ -295,3 +308,13 @@ html.css-scroll-fixed
 
 			.no-touchevents &:hover
 				color: $base-color
+
+/* button catalog menu close
+.btn-nav-close
+	display: none
+	position: absolute
+	right: 0
+	top: 0
+
+	+media('<tab-lg')
+		display: block
