--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -196,8 +196,11 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 /*content img*/
 .imgc
 	text-align: center
-	padding-bottom: $bottom-space
+	margin-bottom: $bottom-space
 	clear: both
+
+	&.layout-full-width
+		margin-bottom: $bottom-space--md
 
 .imgl
 	text-align: left
