--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -127,8 +127,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 .entry-img
 	position: relative
 	overflow: hidden
-	+ratio(10, 6)
-	margin-bottom: $bottom-space
+	+ratio(144, 81)
+	margin-bottom: $bottom-space--md
 
 	img
 		position: absolute
