--- a/src/sass/components/_article.sass
+++ b/src/sass/components/_article.sass
@@ -5,6 +5,9 @@
 /*article footer
 .article-footer
 	position: relative
-	margin-top: $bottom-space--md
+	margin-top: round($bottom-space--md*0.5)
+
+	.layout-text > *
+		margin-top: round($bottom-space--md*0.5)
 
 /*article footer end
