--- a/src/sass/components/_products-list.sass
+++ b/src/sass/components/_products-list.sass
@@ -227,6 +227,7 @@ $product-figure-right-space: 20px
 
 	.btn-outline
 		display: block
+		+padding-horizontal(12px)
 
 		.in-cart &
 			display: none
