--- a/src/sass/components/_share-box.sass
+++ b/src/sass/components/_share-box.sass
@@ -6,6 +6,10 @@
 .share-box
 	+clear-spacing
 
+	.article-footer &
+		+display-inline-block-top
+		margin-right: 40px
+
 	.share-box__label
 		+display-inline-block-middle
 		+font(#{$font-size}, #{$line-height})
