--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -4,6 +4,10 @@
 
 /*HEADER*/
 
+.header
+	background-color: white
+	box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1)
+
 .header__align
 	width: calc(100% + 100px)
 	overflow-x: hidden
