--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -175,6 +175,9 @@ $catalog-menu-tab-height: 70px !default
 $catalog-categories-width--full: 280px !default
 $catalog-categories-width--short: 80px !default
 
+// footer
+$footer-nav-horizontal-space: 40px
+
 // top panel
 $top-panel-height: 80px !default
 $top-panel-height--md: 50px !default
