--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -25,6 +25,7 @@
 	position: relative
 	+font-alt-bold
 	+font(16px, 24px)
+	text-align: center
 	color: $btn-text-color
 	padding: 12px 25px
 	border: 1px solid transparent
@@ -37,7 +38,7 @@
 	.no-touchevents &:hover
 		background-color: $btn-bg-hover-color
 
-	&:active
+	//&:active
 		transform: scale(0.95)
 
 //btn-default-alt
@@ -167,7 +168,7 @@
 	letter-spacing: 0.05em
 	white-space: nowrap
 	color: $btn-text-color
-	padding: 12px 12px
+	padding: 11px 24px 9px
 	border: 3px solid $base-color--ea
 	background-color: transparent
 	transition-property: background-color, color, border-color
