--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -255,12 +255,16 @@
 
 	i
 		+display-inline-block-middle
-		+size(26px, 20px)
+		+size(24px, 24px)
 		margin-right: 15px
 		+font(0, 0)
 		background: no-repeat center
-		background-image: url(../../img/logo-short-alt.png)
+		background-image: url(../../img/logo-short--ea.png)
 		background-size: contain
+
+		.ea-site &
+			+size(26px, 20px)
+			background-image: url(../../img/logo-short-alt.png)
 
 	span
 		+display-inline-block-middle
