--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -225,11 +225,11 @@
 		+hide-text
 
 .logo-alt-title__fig
-	+size(101px, auto)
-	background-image: url(../../img/logo-title.png)
+	+size(152px, auto)
+	background-image: url(../../img/logo.png)
 
 	&::before
-		+ratio(101, 53)
+		+ratio(152, 47)
 
 	.ea-site &
 		+size(178px, auto)
