--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -11,8 +11,7 @@ html.css-scroll-fixed
 .content-wrap, .scroll-nav, .side-menu, .top-panel, .footer__holder
 	transition-property: transform
 	transition-duration: 0.2s
-	//transition-timing-function: ease-out
-	transition-timing-function: linear
+	transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1)
 
 	.nav-popup-before-open &
 		transform: translate($nav-width - 250, 0)
