--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -58,6 +58,7 @@
 @import components/accordion-simple
 @import components/j-filer
 @import components/user-form
+@import components/search-form.sass
 @import components/user-options
 @import components/bitrix-search
 @import components/pagination-2
