--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -30,17 +30,26 @@ h1, h2, h3, h4, h5, h6
 h1
 	+font($font-size-h1, $line-height-h1)
 
+	+media('<tab-lg')
+		+font($font-size-h1--md, $line-height-h1--md)
+
 	+media('<mob-lg')
 		+font($font-size-h1--sm, $line-height-h1--sm)
 
 h2
 	+font($font-size-h2, $line-height-h2)
 
+	+media('<tab-lg')
+		+font($font-size-h2--md, $line-height-h2--md)
+
 	+media('<mob-lg')
 		+font($font-size-h2--sm, $line-height-h2--sm)
 
 h3
 	+font($font-size-h3, $line-height-h3)
+
+	+media('<mob-lg')
+		+font($font-size-h3--sm, $line-height-h3--sm)
 
 h4
 	+font($font-size-h4, $line-height-h4)
