--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -169,13 +169,19 @@
 	white-space: nowrap
 	color: $btn-text-color
 	padding: 11px 24px 9px
-	border: 3px solid $base-color--ea
+	border: 3px solid $base-color
 	background-color: transparent
 	transition-property: background-color, color, border-color
 	transition-duration: $animation-speed
 	margin: 0
 
 	.no-touchevents &:hover
+		background-color: $base-color
+
+	.ea-site &
+		border-color: $base-color--ea
+
+	.no-touchevents .ea-site &:hover
 		background-color: $base-color--ea
 
 // btn-with-icon
