--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -18,18 +18,27 @@ $line-height--less: round-float(2.0rem/$font-size--less, 2) !default
 // ===============
 $font-size-h1: 4.8rem !default
 $line-height-h1: round-float(6.0rem/$font-size-h1, 2) !default
+// md ===
+$font-size-h1--md: 3.6rem !default
+$line-height-h1--md: round-float(4.8rem/$font-size-h1--md, 2) !default
 // sm ===
-$font-size-h1--sm: 2.6rem !default
-$line-height-h1--sm: round-float(3.4rem/$font-size-h1--sm, 2) !default
+$font-size-h1--sm: 3.0rem !default
+$line-height-h1--sm: round-float(4.2rem/$font-size-h1--sm, 2) !default
 // ===============
 $font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
 $line-height-h2: round-float(4.8rem/3.6rem, 2) !default
+// md ===
+$font-size-h2--md: round-float($font-size-h1--md*0.84, 1) !default
+$line-height-h2--md: round-float(($line-height-h1--md*1.02),2) !default
 // sm ===
-$font-size-h2--sm: round-float($font-size-h1--sm*0.85, 1) !default
-$line-height-h2--sm: round-float(($line-height-h1--sm*1.08),2) !default
+$font-size-h2--sm: round-float($font-size-h1--sm*0.87, 1) !default
+$line-height-h2--sm: round-float(($line-height-h1--sm*1.01),2) !default
 // ===============
 $font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
 $line-height-h3: round-float(3.6rem/2.4rem, 2) !default
+// sm ===
+$font-size-h3--sm: round-float($font-size-h1--sm*0.73, 1) !default
+$line-height-h3--sm: round-float(($line-height-h1--sm*1.05),2) !default
 // ===============
 $font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
 $line-height-h4: round-float(3.0rem/1.8rem, 2) !default
@@ -120,6 +129,12 @@ $select-space-v: 12px
 $select-space-h: $form-input-space-h
 $select-arrow-width: 40px
 $select-arrow-height: 100%
+
+// search form
+$search-form-popup-btn-width: 40px
+$search-form-popup-btn-width--mob-lg: 54px
+$search-form-popup-btn-height: 40px
+$search-form-popup-btn-height--mob-lg: 40px
 
 // btn
 $btn-bg-color: #fabb00 !default
